INCLUDE(FindProtobuf)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})

# Generate C++ files for image.proto
PROTOBUF_GENERATE_CPP(IMAGE_PROTO_SRC IMAGE_PROTO_HDRS image.proto)
SET_SOURCE_FILES_PROPERTIES(IMAGE_PROTO_SRC IMAGE_PROTO_HDRS PROPERTIES GENERATED TRUE)
add_library(image_proto ${IMAGE_PROTO_SRC} ${IMAGE_PROTO_HDRS})

# Generate C++ files for pointcloud.proto
PROTOBUF_GENERATE_CPP(POINTCLOUD_PROTO_SRC POINTCLOUD_PROTO_HDRS pointcloud.proto)
SET_SOURCE_FILES_PROPERTIES(POINTCLOUD_PROTO_SRC POINTCLOUD_PROTO_HDRS PROPERTIES GENERATED TRUE)
add_library(pointcloud_proto ${POINTCLOUD_PROTO_SRC} ${POINTCLOUD_PROTO_HDRS})